[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/hud/Hud.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/hud/red_button07.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/hud/green_button12.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/iomanoid back.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/iomanoid front.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/HBoxContainer/Recipe/LifeBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0, 0.976471, 1 ), Color( 1, 0, 0.0941176, 1 ), Color( 0.992157, 0, 1, 1 ), Color( 1, 0, 0.0941176, 1 ), Color( 0.992157, 0, 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
scale = Vector2( 0.3, 0.3 )
transform = Transform2D( 0.3, 0, 0, 0.3, 0, 0 )
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_top = 20.0
margin_right = 374.0
margin_bottom = 160.0

[node name="Recipe" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 49.0
margin_bottom = 140.0

[node name="LifeBar" type="TextureProgress" parent="Margin/HBoxContainer/Recipe"]
margin_right = 49.0
margin_bottom = 45.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.992157, 0, 0.976471, 1 )

[node name="StaminaBar" type="TextureProgress" parent="Margin/HBoxContainer/Recipe"]
margin_top = 49.0
margin_right = 49.0
margin_bottom = 94.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.0117647, 0, 0, 1 )
tint_progress = Color( 0, 1, 0.0390625, 1 )

[node name="EnergyFragments" type="Label" parent="Margin/HBoxContainer"]
margin_left = 53.0
margin_top = 34.0
margin_right = 112.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "20"

[node name="Hability" type="Label" parent="Margin/HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 116.0
margin_top = 34.0
margin_right = 374.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "Habilidade"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lifeBar_flash = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
